--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,7 +91,7 @@
     @apply scroll-m-20 text-4xl font-bold tracking-tight lg:text-5xl;
   }
   main h2 {
-    @apply scroll-m-20 pb-2 text-3xl lg:text-4xl font-bold tracking-tight first:mt-0;
+    @apply scroll-m-20 pb-2 text-3xl font-bold tracking-tight first:mt-0;
   }
   main h3 {
     @apply scroll-m-20 text-2xl font-semibold tracking-tight;
