--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,7 +88,7 @@
   }
 
   main h1 {
-    @apply scroll-m-20 text-4xl font-bold tracking-tight lg:text-5xl;
+    @apply scroll-m-20 pb-3 text-4xl font-bold tracking-tight lg:text-5xl;
   }
   main h2 {
     @apply scroll-m-20 pb-2 text-3xl font-bold tracking-tight first:mt-0;
